# Atradebot

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  DISCLAMER.md  README.md  api_server.py  api_test.py  app.py  backtest.py  dashboard.py  default.yaml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_doc.txt
backup2023-07-11/: myportfolio.xlsx
docs/: requirements.txt
docs/source/: atradebot.data.rst  atradebot.rst  atradebot.strategies.rst  atradebot.trainer.rst  atradebot.utils.rst  conf.py  index.rst  modules.rst
pages/: page0.py  page1.py  page2.py  page3.py
sd/: company_tickers.json  test_portfolio.csv
src/atradebot/: S&P 500 Companies.xlsx  SP_500_Companies.xlsx  __init__.py  auto.py  backtest.py  dashboard.py  db+news  db+news.py  db.py  db_stocks+news+etfs.py  db_stocks.py  fin_data.py  fin_print.py  fin_rlsp.py  fin_train.py  main.py  mod.py  news2db.py  news_util.py  news_utils.py  params.py  sentiment_utils.py  stock_news.json  stocks_lists.py  strategies.py  ta.py  test_db.py  utils.py  utils_gpt.py  utils_nlp.py
src/atradebot/data/: __init__.py  collect.py  get_news.py  llm_prompt.py  yf_data.py
src/atradebot/models/: fin_rlsp.py  strategies.py
src/atradebot/strategies/: __init__.py  arima.py  gpt.py  llama3.py  simple.py  strategy.py
src/atradebot/trainer/: train_llama3.py
src/atradebot/utils/: alpaca_trade.py  (+6 more)
tests/: pytest.ini  test_db.py  test_main.py
web/backend/: .gitignore  app.py  data.py  db.py  requirements.txt  stocks.py  user.py
web/frontend/: package-lock.json  package.json
(+34 files in other folders)
